// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cancel: custom buttons 1`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary disabled button\\"
            disabled=\\"\\"
            tabindex=\\"-1\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Cancel: custom buttons 3`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary button\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Create a cohort 1`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary disabled button\\"
            disabled=\\"\\"
            tabindex=\\"-1\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Create a cohort 3`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary button\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Create a cohort, cancel 1`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary disabled button\\"
            disabled=\\"\\"
            tabindex=\\"-1\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Create a cohort, cancel 3`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary button\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Create a cohort, click twice, only makes one cohort 1`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary disabled button\\"
            disabled=\\"\\"
            tabindex=\\"-1\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Create a cohort, click twice, only makes one cohort 3`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary button\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Create: custom buttons 1`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary disabled button\\"
            disabled=\\"\\"
            tabindex=\\"-1\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Create: custom buttons 3`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary button\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Render 1 1 1`] = `<DocumentFragment />`;

exports[`Render 1 2 1`] = `<DocumentFragment />`;

exports[`Use a mock stepGroup 1`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        THIS SHOULD APPEAR IN THE RENDERED COMPONENT
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary disabled button\\"
            disabled=\\"\\"
            tabindex=\\"-1\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;

exports[`Use a mock stepGroup 2`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    id=\\"root\\"
  />
  <div />
  <div
    class=\\"ui top aligned page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui fullscreen modal transition visible active\\"
      role=\\"dialog\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"close icon\\"
      />
      <div
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"group icon\\"
        />
        <div
          class=\\"content\\"
        >
          Create a cohort
        </div>
      </div>
      <div
        class=\\"content\\"
      >
        THIS SHOULD APPEAR IN THE RENDERED COMPONENT
        <h2
          class=\\"ui header\\"
        >
          Name your cohort
        </h2>
        <p>
          <i
            aria-hidden=\\"true\\"
            class=\\"star icon primary\\"
          />
          Use a label that makes it easy for you to locate it (e.g. CS 101: Fall 
          2021
          ). You may also change the name of your cohort any time after it has been created.
        </p>
        <form
          class=\\"ui form\\"
        >
          <div
            class=\\"ui fluid focus input\\"
          >
            <input
              name=\\"name\\"
              type=\\"text\\"
            />
          </div>
        </form>
      </div>
      <div
        class=\\"actions\\"
      >
        <div
          class=\\"ui fluid buttons\\"
        >
          <button
            class=\\"ui primary disabled button\\"
            disabled=\\"\\"
            tabindex=\\"-1\\"
          >
            Create
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        data-testid=\\"cohort-create-new-form\\"
      />
    </div>
  </div>
</body>"
`;
